--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.12.12",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "session-file-store": "^1.5.0"
   }
 }
